<resources>
    <string name="app_name">FreeTest_App</string>

    <string name="url_test_activity">UrlTestActivity</string>
    <string name="edit_text_test_activity">EditTextTestActivity</string>
    <string name="recyclerview_test_activity">RecyclerviewTestActivity</string>
    <string name="recyclerview_and_edittext_test_activity">RecyclerviewAndEdittextTestActivity</string>
    <string name="async_task_activity">AsyncTaskActivity</string>
    <string name="coroutine_activity">CoroutineActivity</string>

    <string name="url_test_text_view">ここが&lt;a href="https://www.youtube.com/"&gt;URL&lt;/a&gt;だよ！</string>
</resources>